--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-3">
-						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/room-3.jpg);">
+						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/deluxe3.jpg);">
 							<div class="text text-center pb-2">
 								<h3>Special Rooms</h3>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3">
-						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/swimming-pool.jpg);">
+						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/wifi3.png);">
 							<div class="text text-center pb-2">
-								<h3>Swimming Pool</h3>
+								<h3>WiFi</h3>
 							</div>
 						</a>
 					</div>
