--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	        </div>
 	      </div>
 
-	      <div class="slider-item" style="background-image:url(images/frontbanner2.jpg);">
+	      <div class="slider-item" style="background-image:url(images/frontbanner2.JPG);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center">
