--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</a>
 			</div>
 	    <section class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image:url(images/frontbanner.jpg);">
+	      <div class="slider-item" style="background-image:url(images/frontbannerps.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center">
@@ -229,7 +229,7 @@
     							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
     							<p class="mb-0"><span class="price mr-1"></span> <span class="per">per night</span></p>
 	    						<h3 class="mb-3"><a href="rooms.html">Conference Hall</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
+	    						<p class="pt-1"><a href="" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
     						</div>
     					</div>
     				</div>
