--- a/rooms.html
+++ b/rooms.html
@@ -90,7 +90,7 @@
     							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
     							<p class="mb-0"><span class="price mr-1"></span> <span class="per"></span></p>
 	    						<h3 class="mb-3"><a href="rooms.html">Conference Hall</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
+	    						<p class="pt-1"><a href="" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
     						</div>
     					</div>
     				</div>
@@ -104,7 +104,7 @@
     							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
     							<p class="mb-0"><span class="price mr-1"></span> <span class="per"></span></p>
 	    						<h3 class="mb-3"><a href="rooms.html">Standard Room</a></h3>
-	    						<p class="pt-1"><a href="roomss-standard.html" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
+	    						<p class="pt-1"><a href="rooms-standard.html" class="btn-custom px-3 py-2">View Room Details <span class="icon-long-arrow-right"></span></a></p>
     						</div>
     					</div>
     				</div>
