edit remaining pictures

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-3">
-						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/deluxe3.jpg);">
+						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/deluxe3ps.jpg);">
 							<div class="text text-center pb-2">
 								<h3>Special Rooms</h3>
 							</div>
