--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</a>
 			</div>
 	    <section class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image:url(images/frontbannerps.jpg);">
+	      <div class="slider-item" style="background-image:url(images/frontbanner.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center">
@@ -92,7 +92,7 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-3">
-						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/deluxe3ps.jpg);">
+						<a href="#" class="services-wrap img align-items-end d-flex" style="background-image: url(images/deluxe3.jpg);">
 							<div class="text text-center pb-2">
 								<h3>Special Rooms</h3>
 							</div>
