--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-		<div class="hero-wrap" style="background-image: url('images/frontbannerps.jpg');">
+		<div class="hero-wrap" style="background-image: url('images/frontbanner.jpg');">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text d-flex align-itemd-end justify-content-center">
