adress and contact details footer

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 	            </div>
 	          </div>
 	          <div class="pb-md-5">
-							<p>Hotel GoodNews is a luxury hotel located inthe heart of Lira town. Oferring state of the art world class services to suit both local and visiting /international guests. we have local and international dishes on our menu,including:-indian,english,french,italian,spanish and local dishes to suit all african guests. To ensure all our guests are covered,special dishes of any known culture can be prepared on special order as our chefs are versatile and world class.</p>
+							<p>Hotel GoodNews is a luxury 4 star hotel located in the heart of Lira town. Oferring state of the art world class services to suit both local and visiting /international guests. we have local and international dishes on our menu,including:-indian,english,french,italian,spanish and local dishes to suit all african guests. To ensure all our guests are covered,special dishes of any known culture can be prepared on special order as our chefs are versatile and world class.</p>
 							<p>the hotel also offers wifi for their customers,has an exquisite conference hall for workshops,conferences,weddings and other type of gatherings. accompaned by well trained and able security personel to ensure you never ever feel un safe or insecure assisted by 24 hour a day cctv cameras.  </p>
               <p>Hotel Goodnews staff are world class trained, with state of the art hospitability to always be at your service to ensure you get full satisfaction and value for money any time you within Lira city</p>
               <ul class="ftco-social d-flex">
@@ -358,8 +358,8 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256778899889</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town,plot 25,Oyite Ojok Lane</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256-39 2158002</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hotelgoodnews@gmail.com</span></a></li>
 	              </ul>
 	            </div>
