--- a/contact.html
+++ b/contact.html
@@ -72,12 +72,12 @@
           <div class="w-100"></div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Address:</span> Lira town mainstreet plot 17</p>
+	            <p><span>Address:</span>Plot 25, Oyite Ojok lane,Lira town </p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Phone:</span> <a href="tel://1234567920">+ 256 778889998</a></p>
+	            <p><span>Phone:</span> <a href="tel://1234567920">+ 256 39 2158002</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -141,8 +141,8 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256778899889</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town,plot 25,Oyite Ojok Lane</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256-39 2158002</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hotelgoodnews@gmail.com</span></a></li>
 	              </ul>
 	            </div>
