--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Hotel GoodNews</h2>
-              <p>East or west,only good is good news!Goodnews hotel will be a home away from home when your looking a place o call home</p>
+              <p>East or west,only good is good news!Goodnews hotel will be a home away from home when your looking a place to call home</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -601,8 +601,8 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256778899889</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town,plot 25,Oyite Ojok Lane</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256-39 2158002</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hotelgoodnews@gmail.com</span></a></li>
 	              </ul>
 	            </div>
