--- a/rooms-single.html
+++ b/rooms-single.html
@@ -264,8 +264,8 @@
             	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256778899889</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town,plot 25,Oyite Ojok Lane</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256-39 2158002</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hotelgoodnews@gmail.com</span></a></li>
 	              </ul>
 	            </div>
