email add changes

--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Located in the heart of Lira Town,plot 25,Oyite Ojok Lane</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+256-39 2158002</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hotelgoodnews@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@hotelgoodnews.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
